fix text wrapping

--- a/css/build.css
+++ b/css/build.css
@@ -11,6 +11,7 @@
 	text-align: center;
 	cursor: pointer;
 	background-color: #c0c0c0;
+	white-space: initial;
 }
 
 .btn-secondary:focus,
